# Multi-Agent-Sales-Development-Representative-Automation-System

./: README.md  pyproject.toml  sdr_automation.py
system-prompts/: busy_sales_agent.md  casual_sales_agent.md  company_background.md  engaging_sales_agent.md  sales_manager_agent.md  subject_writer_agent.md
